# quantclass-ai-extension

./: .gitignore  LICENSE  README.md  gstack角色列表.txt  readme.txt
backend/: config.py  main.py  pyproject.toml  requirements.txt
backend/database/: __init__.py  connection.py  init_db.py
backend/llm/: __init__.py  adapter.py  base.py  prompts.py
backend/models/: __init__.py  responses.py  schemas.py
backend/routers/: __init__.py  admin.py  agent.py  assist.py  auth.py  bbs.py  chat.py  config.py  health.py  knowledge.py  memory.py  pdf.py  search.py  summary.py  tags.py
backend/services/: __init__.py  agent_service.py  auth_service.py  bbs_service.py  chat_service.py  knowledge_service.py  md_storage.py  memory_service.py  reading_service.py  search_service.py  strategy_service.py  summary_service.py  tag_service.py
backend/tests/: conftest.py  fake_llm.py  test_admin_assist.py  test_admin_auth_gaps.py  test_auth.py  test_config.py  test_health.py  test_knowledge.py  test_knowledge_gaps.py  test_knowledge_workflow.py  test_llm_integration.py  test_search_advanced.py  test_search_gaps.py  test_search_summary.py  test_summary_gaps.py  test_tags.py
extension/: manifest.json
需求分析/: BBS精华帖子抓取插件-技术方案.md  BBS精华帖子抓取插件-需求分析.md
需求分析/列表页样本/: 量化小论坛-列表页面.html
需求分析/列表页样本/量化小论坛-列表页面_files/: 33b9d0e8~7274e1de.136d80d.js.下载  5a7ee80d~31ecd969.0f17cc0.js.下载  _id~01e7b97c.81206f9.js.下载  _id~01e7b97c.89b3502.css  _id~01e7b97c.e125879.js.下载  _id~253ae210.218d2e2.js.下载  js  v1  (+22 more)
需求分析/没有权限的帖子样本/: 新人小徐WEB3的被骗日记-量化小论坛.html
需求分析/详细页面样本/: 翻开自由现金流的“暴跌史”：从血泪教训到心理建设 - 量化小论坛.htm
(+54 files in other folders)
